[gd_scene load_steps=12 format=2]

[ext_resource path="res://RightPaddle.gd" type="Script" id=1]
[ext_resource path="res://LeftPaddle.gd" type="Script" id=2]
[ext_resource path="res://Ball.gd" type="Script" id=3]
[ext_resource path="res://World.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.5, 86 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5.5, 86 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 9.75, 10 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 508, 4.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 511, 5.5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 20, 302.5 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 15.5, 299.5 )

[node name="World" type="Node"]
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftPaddle" type="KinematicBody2D" parent="."]
position = Vector2( 182, 158 )
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="LeftPaddle"]
margin_right = 11.0
margin_bottom = 172.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftPaddle"]
position = Vector2( 5.5, 86 )
shape = SubResource( 1 )

[node name="RightPaddle" type="KinematicBody2D" parent="."]
position = Vector2( 857, 167 )
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="RightPaddle"]
margin_right = 11.0
margin_bottom = 172.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightPaddle"]
position = Vector2( 6, 86 )
shape = SubResource( 2 )

[node name="Ball" type="KinematicBody2D" parent="." groups=["BallGroup"]]
position = Vector2( 517, 210 )
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
position = Vector2( 10.25, 10 )
shape = SubResource( 3 )

[node name="ColorRect" type="ColorRect" parent="Ball"]
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopWall" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopWall"]
position = Vector2( 512, -5.5 )
shape = SubResource( 4 )

[node name="BottomWall" type="StaticBody2D" parent="."]
position = Vector2( 0, 600 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomWall"]
position = Vector2( 514, 4.5 )
shape = SubResource( 5 )

[node name="LeftOut" type="Area2D" parent="."]
position = Vector2( -30, 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftOut"]
position = Vector2( 7, 296 )
shape = SubResource( 6 )

[node name="RightOut" type="Area2D" parent="."]
position = Vector2( 1024, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightOut"]
position = Vector2( 19, 299 )
shape = SubResource( 7 )

[node name="Player1Score" type="Label" parent="."]
margin_left = 179.0
margin_top = 53.0
margin_right = 206.0
margin_bottom = 74.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player2Score" type="Label" parent="."]
margin_left = 804.0
margin_top = 52.0
margin_right = 832.0
margin_bottom = 66.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Countdown" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="LeftOut" to="." method="_on_Left_body_entered"]
[connection signal="body_entered" from="RightOut" to="." method="_on_Right_body_entered"]
[connection signal="timeout" from="Countdown" to="." method="_on_Countdown_timeout"]
